@@ -1,9 +1,9 @@
 package at.petrak.hexcasting.common.lib;
 
-import at.petrak.hexcasting.api.misc.MediaConstants;
-import at.petrak.hexcasting.api.utils.HexUtils;
 import at.petrak.hexcasting.api.casting.ActionRegistryEntry;
+import at.petrak.hexcasting.api.misc.MediaConstants;
 import at.petrak.hexcasting.api.mod.HexTags;
+import at.petrak.hexcasting.api.utils.HexUtils;
 import at.petrak.hexcasting.common.items.ItemJewelerHammer;
 import at.petrak.hexcasting.common.items.ItemLens;
 import at.petrak.hexcasting.common.items.ItemLoreFragment;
@@ -18,8 +18,12 @@ import net.minecraft.core.Registry;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.EquipmentSlotGroup;
+import net.minecraft.world.entity.ai.attributes.AttributeModifier;
+import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.food.FoodProperties;
 import net.minecraft.world.item.*;
+import net.minecraft.world.item.component.ItemAttributeModifiers;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
@@ -37,8 +41,9 @@ public class HexItems {
     }
 
     public static void registerItemCreativeTab(CreativeModeTab.Output r, CreativeModeTab tab) {
-        if (tab == HexCreativeTabs.SCROLLS) generateScrollEntries();
-        for (var item : ITEM_TABS.getOrDefault(tab, List.of())) {
+        if (tab == HexCreativeTabs.SCROLLS)
+            generateScrollEntries(r);
+        for (var item : ITEM_TABS.getOrDefault(tab, Collections.emptyList())) {
             item.register(r);
         }
     }
@@ -69,8 +74,8 @@ public class HexItems {
     public static final ItemStaff STAFF_MINDSPLICE = make("staff/mindsplice", new ItemStaff(unstackable().rarity(Rarity.UNCOMMON)));
 
     public static final ItemLens SCRYING_LENS = make("lens", new ItemLens(
-        IXplatAbstractions.INSTANCE.addEquipSlotFabric(EquipmentSlot.HEAD)
-            .stacksTo(1)));
+            IXplatAbstractions.INSTANCE.addEquipSlotFabric(EquipmentSlot.HEAD)
+                    .stacksTo(1)));
 
     public static final ItemAbacus ABACUS = make("abacus", new ItemAbacus(unstackable()));
     public static final ItemThoughtKnot THOUGHT_KNOT = make("thought_knot", new ItemThoughtKnot(unstackable()));
@@ -83,7 +88,19 @@ public class HexItems {
     public static final ItemArtifact ARTIFACT = make("artifact", new ItemArtifact(unstackable().rarity(Rarity.RARE)));
 
     public static final ItemJewelerHammer JEWELER_HAMMER = make("jeweler_hammer",
-        new ItemJewelerHammer(Tiers.IRON, 0, -2.8F, props().stacksTo(1).defaultDurability(Tiers.DIAMOND.getUses())));
+            new ItemJewelerHammer(Tiers.IRON, props()
+                    .stacksTo(1)
+                    .durability(Tiers.DIAMOND.getUses())
+                    .attributes(ItemAttributeModifiers.builder()
+                            .add(Attributes.ATTACK_SPEED, new AttributeModifier(
+                                    modLoc("jeweler_hammer_speed"),
+                                    -2.8,
+                                    AttributeModifier.Operation.ADD_VALUE
+                            ), EquipmentSlotGroup.ANY)
+                            .build()
+                    )
+            )
+    );
 
     public static final ItemScroll SCROLL_SMOL = make("scroll_small", new ItemScroll(props(), 1));
     public static final ItemScroll SCROLL_MEDIUM = make("scroll_medium", new ItemScroll(props(), 2));
@@ -92,7 +109,7 @@ public class HexItems {
     public static final ItemSlate SLATE = make("slate", new ItemSlate(HexBlocks.SLATE, props()));
 
     public static final ItemMediaBattery BATTERY = make("battery",
-        new ItemMediaBattery(unstackable()), null);
+            new ItemMediaBattery(unstackable()), null);
 
     public static final Supplier<ItemStack> BATTERY_DUST_STACK = addToTab(() -> ItemMediaBattery.withMedia(
             new ItemStack(HexItems.BATTERY),
@@ -126,7 +143,7 @@ public class HexItems {
         var out = new EnumMap<ItemPridePigment.Type, ItemPridePigment>(ItemPridePigment.Type.class);
         for (var politicsInMyVidya : ItemPridePigment.Type.values()) {
             out.put(politicsInMyVidya, make("pride_colorizer_" + politicsInMyVidya.getName(),
-                new ItemPridePigment(politicsInMyVidya, unstackable())));
+                    new ItemPridePigment(politicsInMyVidya, unstackable())));
         }
         return out;
     });
@@ -139,16 +156,16 @@ public class HexItems {
 
     // BUFF SANDVICH
     public static final Item SUBMARINE_SANDWICH = make("sub_sandwich",
-        new Item(props().food(new FoodProperties.Builder().nutrition(14).saturationMod(1.2f).build())));
+            new Item(props().food(new FoodProperties.Builder().nutrition(14).saturationModifier(1.2f).build())));
 
     public static final ItemLoreFragment LORE_FRAGMENT = make("lore_fragment",
-        new ItemLoreFragment(unstackable()
-            .rarity(Rarity.RARE)));
+            new ItemLoreFragment(unstackable()
+                    .rarity(Rarity.RARE)));
 
     public static final ItemCreativeUnlocker CREATIVE_UNLOCKER = make("creative_unlocker",
-        new ItemCreativeUnlocker(unstackable()
-            .rarity(Rarity.EPIC)
-            .food(new FoodProperties.Builder().nutrition(20).saturationMod(1f).alwaysEat().build())));
+            new ItemCreativeUnlocker(unstackable()
+                    .rarity(Rarity.EPIC)
+                    .food(new FoodProperties.Builder().nutrition(20).saturationModifier(1f).alwaysEdible().build())));
 
     //
 
@@ -160,18 +177,18 @@ public class HexItems {
         return props().stacksTo(1);
     }
 
-    private static void generateScrollEntries() {
+    private static void generateScrollEntries(CreativeModeTab.Output r) {
         var keyList = new ArrayList<ResourceKey<ActionRegistryEntry>>();
         Registry<ActionRegistryEntry> regi = IXplatAbstractions.INSTANCE.getActionRegistry();
         for (var key : regi.registryKeySet())
             if (HexUtils.isOfTag(regi, key, HexTags.Actions.PER_WORLD_PATTERN))
                 keyList.add(key);
-        keyList.sort( (a, b) -> a.location().compareTo(b.location()) );
+        keyList.sort(Comparator.comparing(ResourceKey::location));
         for (var key : keyList) {
-            addToTab(() -> ItemScroll.withPerWorldPattern(
-                new ItemStack(HexItems.SCROLL_LARGE),
-                key.location().toString()
-            ),HexCreativeTabs.SCROLLS);
+            r.accept(ItemScroll.withPerWorldPattern(
+                    new ItemStack(HexItems.SCROLL_LARGE),
+                    key
+            ));
         }
     }
 
